// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabMenuItem should render correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 15px;
  box-sizing: border-box;
  cursor: pointer;
}

.c0:hover :last-child {
  opacity: 1 !important;
}

.c1 {
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 100%;
  height: 5px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 0;
}

<TabMenuItem
  selected={false}
>
  <styled.div>
    <div
      className="c0"
    >
      MyTabMenuItem
      <styled.div
        visible={false}
      >
        <div
          className="c1"
        />
      </styled.div>
    </div>
  </styled.div>
</TabMenuItem>
`;

exports[`TabMenuItem should render correctly when selected 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 15px;
  box-sizing: border-box;
  cursor: pointer;
}

.c0:hover :last-child {
  opacity: 1 !important;
}

.c1 {
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 100%;
  height: 5px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 1;
}

<TabMenuItem
  selected={true}
>
  <styled.div>
    <div
      className="c0"
    >
      MyTabMenuItem
      <styled.div
        visible={true}
      >
        <div
          className="c1"
        />
      </styled.div>
    </div>
  </styled.div>
</TabMenuItem>
`;
